<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/maple" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_title"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="8dp"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/member_spinner"
            android:layout_gravity="center"
            android:spinnerMode="dropdown" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_title_after"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="8dp"
            />
        
    </LinearLayout>

    <Button
        android:id="@+id/caller_button"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/caller"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" >

        <TableRow >
            <TextView
                android:text="@string/point_title"
                android:layout_span="3"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="18sp"/>

        </TableRow>
        <TableRow >
            <TextView
                android:text="@string/point_1"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:layout_width="50dp"
                android:gravity="center"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/rank_1_name"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:layout_width="160dp"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/rank_1_point"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:layout_width="80dp"
                android:gravity="center"
                android:textSize="22sp"/>
        </TableRow>
        <TableRow >
            <TextView
                android:text="@string/point_2"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/rank_2_name"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/rank_2_point"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="18sp"/>
        </TableRow>
        <TableRow >
            <TextView
                android:text="@string/point_3"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/rank_3_name"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/rank_3_point"
                android:background="#ffd5ea"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="18sp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/message_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/message"
            android:layout_width="247dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="#ffd5ea"
            android:hint="@string/message_sample"
            android:textSize="16sp" />

        <Button
            android:id="@+id/message_edit_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/message_edit" />

    </LinearLayout>

    <WebView
        android:id="@+id/webview1"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp" />

    <LinearLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|center">
        <com.google.android.gms.ads.AdView android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adUnitId="@string/banner_ad_unit_id"
            ads:adSize="BANNER" />
    </LinearLayout>
</LinearLayout>